# wasmx

./: .gitignore  .goosehints  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTE.md  DEBUG.md  DEV.md  EXAMPLES.md  LICENSE  Makefile  README.md  SECURITY.md  app.go  go.mod  go.sum  go.work  go.work.sum
.claude/: settings.local.json
app/: app.go  app_creator.go  app_multi.go  config.go  custom_signers.go  encoding.go  export.go  simulation_test.go  test_helpers.go  upgrades.go
codec/: account.go  address.go  bech32_codec.go  interfaces.go  internal.go  routing.go  utils.go
config/: app_interface.go  app_multi.go  baseapp_interface.go  config.go  options.go
context/: metainfo.go  node.go
crypto/: secp256k1.go
db-sqlite/: batch.go  db.go  db_test.go  go.mod  go.sum  iterator.go  types.go
encoding/: encoding.go  params.go
modules/: ewasm.wasm  ewasm.wat
multichain/: app_creator.go  helper.go  multichain.go
mythos/: go.mod
mythos-wasmedge/: go.mod  go.sum
mythos-wazero/: Makefile  go.mod  go.sum
proto/: buf.md  buf.yaml
scripts/: README.md  protocgen-pulsar.sh  protocgen.sh  statesync.sh
server/: reset.go  start.go  util.go
tests/: README.md  go.mod  go.sum
tests/testdata/rust/simple_storage/: Cargo.toml
tests/testdata/rust/simple_storage/src/: calldata.rs  lib.rs  storage.rs  types.rs  utils.rs
wasmx-vmimap/: ctx.go  go.mod  go.sum  host.go  host_i32.go  host_i64.go  host_mock.go  host_mock_i32.go  host_mock_i64.go  initiate.go  listener.go  module.go  oauth2.go  ops.go  ops_mock.go  server.go  types.go  types_email.go  types_server.go  utils.go
(+1611 files in other folders)
