[package]
name = "simple_storage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.12.0", features = ["base64"] }
base64 = "0.22.1"
wasmx_env = { path = "../wasmx_env" }
